# Stiff-GIPC

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
Assets/scene/: parameterSetting.txt
Assets/scene/json/: wrecking-ball-box.json
Assets/sorted_mesh/: bunny2_sorted.16.msh  bunny2_sorted.16.part  cloth_high_sorted.16.part
MeshProcess/: CMakeLists.txt
MeshProcess/metis_partition/: CMakeLists.txt
MeshProcess/metis_partition/src/: main.cpp  mesh.cpp  mesh.h  metis_sort.cpp  metis_sort.h  node_edge_model.cpp  node_edge_model.h
StiffGIPC/: GIPC.cu  GIPC.cuh  MASPreconditioner.cu  MASPreconditioner.cuh  PCG_SOLVER.cu  PCG_SOLVER.cuh  device_fem_data.cu  device_fem_data.cuh  eigen_data.h  femEnergy.cu  femEnergy.cuh  gl_main.cu  gpu_eigen_libs.cu  gpu_eigen_libs.cuh  load_mesh.cpp  mlbvh.cu
StiffGIPC/abd_system/: abd_system.h
StiffGIPC/abd_system/abd_system_function/: cal_q_tilde.cu  setup_abd_system_gradient_and_hessian.cu  step_forward.cu
StiffGIPC/cuda_tools/: cuda_device_buffer.h  cuda_device_buffer.inl  cuda_tools.h
StiffGIPC/gipc/: gipc.cu  gipc.h
StiffGIPC/gipc/utils/: simple_scene_importer.cpp
StiffGIPC/linear_system/linear_system/: global_linear_system.cu  global_linear_system.h  global_matrix.cu  global_matrix.h  i_linear_system_solver.cu  i_preconditioner.cu  i_preconditioner.h  linear_subsystem.cu
StiffGIPC/linear_system/preconditioner/: abd_preconditioner.cu  abd_preconditioner.h  fem_mas_preconditioner.cu  fem_mas_preconditioner.h
StiffGIPC/linear_system/solver/: pcg_solver.cu  pcg_solver.h
StiffGIPC/linear_system/utils/: spmv.cu  (+3 more)
(+8 files in other folders)
